--- a/README.Rmd
+++ b/README.Rmd
@@ -209,24 +209,23 @@ seecol(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
 
 <!-- More flexible and complex color palettes can be created by using the `seecol()` and `usecol()` functions.  -->
 
-
 ### Additional color palettes
 
 In addition to the 16\ specific color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), 
 **unikn** currently provides color palettes of the following institutions:
 
 - [Caltech](https://www.caltech.edu/): `caltech_pal_1`, `caltech_pal_2`, `caltech_pal_3` 
-- [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey` 
+- [ETH Zurich](https://ethz.ch/): `eth_pal_1`, `eth_pal_2`, `eth_pal_3` 
 - [Free University Berlin](https://www.fu-berlin.de/en/index.html): `fu_pal_0`, `fu_pal_1`, `fu_pal_2`, `fu_pal_3` 
 - [Humboldt University Berlin](https://www.hu-berlin.de/en): `hu_pal_1`, `hu_pal_2` 
 - [Max Planck Society](https://www.mpg.de/en): `mpg_pal` 
 - [University of Bonn](https://www.uni-bonn.de/en): `uni_bonn_1`, `uni_bonn_2` 
 - [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_0`, `uni_freiburg_1`, `uni_freiburg_2`,   
-  (from\ 2022: `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`)  
+  (from\ 2022: `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`) 
 - [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3` 
 - [University of Hamburg](https://www.uni-hamburg.de/): `uni_hamburg_1`, `uni_hamburg_2` 
 - [University of Köln](https://www.uni-koeln.de/): `uni_koeln_1`, `uni_koeln_2` 
-- [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz`, `uni_konstanz_pref` 
+- [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz_1`, `uni_konstanz_2` 
 - [University of Mannheim](https://www.uni-mannheim.de/): `uni_mannheim_1`, `uni_mannheim_2` 
 - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
 - [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3` 
@@ -235,7 +234,7 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 
 <!-- Note: Duplicate image in vignette color_inst.Rmd -->
 
-```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = 1.8}
+```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = 2.0}
 # Inspect additional/alternative color palettes:
 seecol("add")
 ```
@@ -287,7 +286,7 @@ Using `seecol()` on an individual color palette provides a quick overview over i
 
 ```{r seecol-pref, fig.width = 7, out.width = "550px", fig.align = 'center', fig.asp = .80}
 # Inspect an individual color palette:
-seecol(pal = eth_pal,                      # a color palette / list of palettes / keyword
+seecol(pal = eth_pal_1,                    # a color palette / list of palettes / keyword
        col_brd = "white", lwd_brd = 5,     # color and width of borders
        main = "Colors of the ETH Zurich")  # plot title 
 ```
