--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -61,7 +61,7 @@ In addition to the specific color palettes of the [University of Konstanz](https
 **unikn** currently provides the general color palettes of the following institutions: 
 
 - [Caltech](https://www.caltech.edu/): `caltech_pal_1`, `caltech_pal_2`, `caltech_pal_3` 
-- [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey` 
+- [ETH Zurich](https://ethz.ch/): `eth_pal_1`, `eth_pal_2`, `eth_pal_3` 
 - [Free University Berlin](https://www.fu-berlin.de/en/index.html): `fu_pal_0`, `fu_pal_1`, `fu_pal_2`, `fu_pal_3` 
 - [Humboldt University Berlin](https://www.hu-berlin.de/en): `hu_pal_1`, `hu_pal_2` 
 - [Max Planck Society](https://www.mpg.de/en): `mpg_pal` 
@@ -85,7 +85,7 @@ We can use and modify these palettes with the **unikn** [color functions](colors
 
 <!-- Note: Duplicate image in README.Rmd -->
 
-```{r show-add-pals, fig.width = 7.2, out.width = "550px", fig.asp = 1.8}
+```{r show-add-pals, fig.width = 7.2, out.width = "550px", fig.asp = 2.0}
 seecol("add", main = "Color palettes from various institutions")
 ```
 
