--- a/README.Rmd
+++ b/README.Rmd
@@ -98,7 +98,7 @@ devtools::install_github('hneth/unikn')
 The **unikn** contains two categories of color palettes: 
 
 - 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
-- 47\ additional color palettes from various institutions
+- 48\ additional color palettes from various institutions
 
 
 ### The colors of Konstanz University
@@ -231,6 +231,7 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 - [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3` 
 - [University of Ulm](https://www.uni-ulm.de/): `uni_ulm_1`, `uni_ulm_2` 
 - [Rensselaer Polytechnic Institute](https://www.rpi.edu/): `rpi_pal_1`, `rpi_pal_2`, `rpi_pal_3`
+- [RPTU Kaiserslautern-Landau](https://rptu.de/): `rptu_pal` 
 
 <!-- Note: Duplicate image in vignette color_inst.Rmd -->
 
@@ -239,7 +240,7 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 seecol("add")
 ```
 
-These 47\ palettes are exported (as named vectors), documented (to credit their contributors and sources), and can easily be used and modified by the R community (e.g., in visualizations).
+These 48\ palettes are exported (as named vectors), documented (to credit their contributors and sources), and can easily be used and modified by the R community (e.g., in visualizations).
 
 
 <!-- Collecting contributed color palettes: -->
