--- a/README.Rmd
+++ b/README.Rmd
@@ -99,9 +99,10 @@ devtools::install_github('hneth/unikn')
 
 ## Colors and color palettes
 
-The **unikn** contains two categories of color palettes: 
+The colors of **unikn** belong to two categories of color palettes: 
 
 - 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
+
 - 52\ additional color palettes from various academic institutions
 
 
